--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fastify/postgres": "^5.1.0",
     "@fastify/static": "^6.5.0",
     "@fastify/view": "^7.1.0",
+    "dotenv": "^16.0.3",
     "fastify": "^4.7.0",
+    "googleapis": "^108.0.0",
     "handlebars": "^4.7.7",
     "node-fetch": "^3.2.10"
   }
